// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons.js { Button } <Button.Medium.Black> matches snapshot 1`] = `
<button
  className="Button Medium Black"
  type="button"
>
  Click me
</button>
`;

exports[`Buttons.js { Button } <Button.Medium.BlackOutline> matches snapshot 1`] = `
<button
  className="Button Medium BlackOutline"
  type="button"
>
  Click me
</button>
`;

exports[`Buttons.js { Button } <Button.Medium.Stateful> matches snapshot 1`] = `
<button
  className="Button Medium Stateful"
  type="button"
>
  Click me
</button>
`;

exports[`Buttons.js { Button } <Button.Medium.WhiteOutline> matches snapshot 1`] = `
<button
  className="Button Medium WhiteOutline"
  type="button"
>
  Click me
</button>
`;
